--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,7 @@
 body {
   background-color: antiquewhite;
+  border: 1px solid red;
+  margin: 0;
+  padding: 3px;
 }
 
-
-
-.navbar{
-  padding: 1em;
-  margin:0;
-  background-color: rgb(250, 229, 204);
-}
-
-.user{
-  font-size: 14px;
-}
