--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color:antiquewhite;
+  background-color:rgb(212, 205, 226);
   border: 1px solid red;
   margin: 0;
   padding: 0px;
