--- a/src/components/EveryPageComponents/NavBar.module.css
+++ b/src/components/EveryPageComponents/NavBar.module.css
@@ -1,18 +1,21 @@
 .navBar{
-  padding: 1em;
-  margin:0;
-  background-color:#617B30;
   display:flex;
   justify-content: space-evenly;
-  height: 50px;
+  margin:0;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+  background-color:#617B30;
+  height: 40px;
   font-family: 'Press Start 2P', cursive;
-  color: #0e3746,  #0e3746;
+  color: #0e3746;
   
 }
 
 .homeLink{
+  display:flex;
+  justify-content: center;
+  font-size: 10%;
   border: 1px solid #0e3746;
-  padding-top: 10px;
   padding-right: 2.5px;
   padding-left: 2.5px;
   background-color:  #d4d7db;
@@ -20,23 +23,20 @@
   margin-left: 2.5px;
   border-radius: 10px;
   color: #0e3746;
+  text-decoration: none;
+  height: 30px;
+  line-height: 30px;
 }
 .homeLink:hover{
-  border: 1px solid #0e3746;
-  padding-top: 10px;
-  padding-right: 2.5px;
-  padding-left: 2.5px;
-  background-color:  #d4d7db;
-  margin-right: 2.5px;
-  margin-left: 2.5px;
-  border-radius: 10px;
   color: #617B30;
 }
 
 
 .footballLink{
+  display:flex;
+  justify-content: center;
+  font-size: 5%;
   border: 1px solid #0e3746;
-  padding-top: 10px;
   padding-right: 2.5px;
   padding-left: 2.5px;
   background-color:  #d4d7db;
@@ -44,22 +44,19 @@
   margin-left: 2.5px;
   border-radius: 10px;
   color: #0e3746;
+  text-decoration: none;
+  height: 30px;
+  line-height: 30px;
 }
-.footballLink:hover{
-  border: 1px solid #0e3746;
-  padding-top: 10px;
-  padding-right: 2.5px;
-  padding-left: 2.5px;
-  background-color:  #d4d7db;
-  margin-right: 2.5px;
-  margin-left: 2.5px;
-  border-radius: 10px;
+.footballLink:hover{ 
   color: #617B30;
 }
 
 .codingLink{
+  display:flex;
+  justify-content: center;
+  font-size: 5%;
   border: 1px solid #0e3746;
-  padding-top: 10px;
   padding-right: 2.5px;
   padding-left: 2.5px;
   background-color:  #d4d7db;
@@ -67,22 +64,19 @@
   margin-left: 2.5px;
   border-radius: 10px;
   color: #0e3746;
+  text-decoration: none;
+  height: 30px;
+  line-height: 30px;
 }
 .codingLink:hover{
-  border: 1px solid #0e3746;
-  padding-top: 10px;
-  padding-right: 2.5px;
-  padding-left: 2.5px;
-  background-color:  #d4d7db;
-  margin-right: 2.5px;
-  margin-left: 2.5px;
-  border-radius: 10px;
   color: #617B30;
 }
 
 .cookingLink{
+  display:flex;
+  justify-content: center;
+  font-size: 5%;
   border: 1px solid #0e3746;
-  padding-top: 10px;
   padding-right: 2.5px;
   padding-left: 2.5px;
   background-color:  #d4d7db;
@@ -90,31 +84,28 @@
   margin-left: 2.5px;
   border-radius: 10px;
   color: #0e3746;
+  text-decoration: none;
+  height: 30px;
+  line-height: 30px;
 }
 .cookingLink:hover{
-  border: 1px solid #0e3746;
-  padding-top: 10px;
-  padding-right: 2.5px;
-  padding-left: 2.5px;
-  background-color:  #d4d7db;
-  margin-right: 2.5px;
-  margin-left: 2.5px;
-  border-radius: 10px;
   color: #617B30;
 }
 
 .welcomeUser{
+  display:flex;
+  justify-content: center;
+  font-size: 5%;
   border: 1px solid #0e3746;
   background-color: #d4d7db;
-  font-size: 8px;
   padding:0;
   margin:0;
-  padding-top: 15px;
   padding-right: 2.5px;
   padding-left: 2.5px;
   margin-right: 2.5px;
   margin-left: 2.5px;
   border-radius: 10px;
   color: #0e3746;
- 
+  height: 30px;
+  line-height: 30px;
 }
