--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 body {
+  display: flex;
+  justify-content: center;
   background-color:rgb(212, 205, 226);
   border: 1px solid red;
   margin: 0;
