--- a/src/components/EveryPageComponents/Header.module.css
+++ b/src/components/EveryPageComponents/Header.module.css
@@ -1,11 +1,3 @@
-.headerTitle{
-  display:flex;
-  justify-content: center;
-  font-size: 175%;
-  font-family: 'Press Start 2P', cursive;
-  color: #f4f2ec
-}
-
 
 .header{
   display:flex;
@@ -16,8 +8,19 @@
   display: flex;
   justify-content: center;
   margin:0;
-  padding-top: 2.5%;
-  padding-bottom: 2.5%;
-  padding-left: 2.5%;
+ 
   
+}
+
+.headerTitle{
+  display:flex;
+  font-size: 150%;
+  font-family: 'Press Start 2P', cursive;
+  color: #f4f2ec
+}
+
+
+.welcomeUser{
+font-family: 'Press Start 2P', cursive;
+ font-size: 20%;
 }
