--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-body {
-  display: flex;
-  justify-content: center;
+.App {
+  text-align: center;
   background-color:rgb(212, 205, 226);
-  border: 1px solid red;
   margin: 0;
   padding: 0px;
 }
