--- a/src/components/ArticleComponents/ArticleCard.module.css
+++ b/src/components/ArticleComponents/ArticleCard.module.css
@@ -1,19 +1,31 @@
 .articleCard{
-  margin:0;
-  border: 1px solid aqua;
-  width: 100%;
+  background-color: #d4d7db;
+  border-radius: 10px;
+  padding: 0.5rem 0.5rem;
+  border: 5px solid #0e3746;
+  font-size: 1.5vw;
+  width: 90vw;
+  margin: 10px auto;
+  color:black;
 }
 
 .articleCardTitle{
    font-family: 'Press Start 2P', cursive;
-   font-size: 70%;
+   
 }
 
 .articleCardCommentCount{
-   border: 1px solid red;
+  background-color: #d4d7db;
+  border-radius: 10px;
+  padding: 0.5rem 0.5rem;
+  border: 5px solid #0e3746;
+  font-size: 1.5vw;
+  width: 30vw;
+  margin: 10px auto;
+  color:black;
+  font-family: 'Press Start 2P', cursive;
 }
 
-.articleCardBody{
-  border: 1px solid red;
-  padding:5px;
+h4{
+  font-family: 'Press Start 2P', cursive;
 }
