--- a/src/components/ArticleComponents/ArticleList.module.css
+++ b/src/components/ArticleComponents/ArticleList.module.css
@@ -1,8 +1,13 @@
 
 li{
-  margin: 0;
+  border-radius:10px;
   border: 1px solid red;
   list-style: none;
- 
-
+  background-color: #d4d7db;
+  padding: 0.5rem 0.5rem;
+  border: 5px solid #0e3746;
+  font-size: 1.5vw;
+  width: 90vw;
+  margin: 10px auto;
+  color:black;
 }
