--- a/src/components/ArticleComponents/Voting.module.css
+++ b/src/components/ArticleComponents/Voting.module.css
@@ -1,14 +1,20 @@
-.votingBody{
-  border: 1px solid red;
-}
 .votesTally{
-   border: 1px solid red;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .votesLove{
-  border: 1px solid red;
+   font-size: 3vw;
+
 }
 
 .votesHate{
-  border: 1px solid red;
+  font-size: 3vw;
+}
+
+@media (max-width: 600px) {
+    .voting p {
+      font-size: 2vw;
+      font-family: 'Press Start 2P', cursive;
+
+    }
 }
