--- a/src/components/EveryPageComponents/NavBar.module.css
+++ b/src/components/EveryPageComponents/NavBar.module.css
@@ -7,7 +7,7 @@
   background-color:#617B30;
   height: 40px;
   font-family: 'Press Start 2P', cursive;
-  color: #0e3746;
+  
   
 }
 
@@ -22,10 +22,10 @@
   margin-right: 2.5px;
   margin-left: 2.5px;
   border-radius: 10px;
-  color: #0e3746;
   text-decoration: none;
   height: 30px;
   line-height: 30px;
+  color: black;
 }
 .homeLink:hover{
   color: #617B30;
@@ -43,10 +43,10 @@
   margin-right: 2.5px;
   margin-left: 2.5px;
   border-radius: 10px;
-  color: #0e3746;
   text-decoration: none;
   height: 30px;
   line-height: 30px;
+  color: black;
 }
 .footballLink:hover{ 
   color: #617B30;
@@ -63,10 +63,10 @@
   margin-right: 2.5px;
   margin-left: 2.5px;
   border-radius: 10px;
-  color: #0e3746;
   text-decoration: none;
   height: 30px;
   line-height: 30px;
+  color: black;
 }
 .codingLink:hover{
   color: #617B30;
@@ -83,16 +83,16 @@
   margin-right: 2.5px;
   margin-left: 2.5px;
   border-radius: 10px;
-  color: #0e3746;
   text-decoration: none;
   height: 30px;
   line-height: 30px;
+  color: black;
 }
 .cookingLink:hover{
   color: #617B30;
 }
 
-.welcomeUser{
+/* .welcomeUser{
   display:flex;
   justify-content: center;
   font-size: 5%;
@@ -108,4 +108,4 @@
   color: #0e3746;
   height: 30px;
   line-height: 30px;
-}
+} */
