--- a/src/components/EveryPageComponents/Header.module.css
+++ b/src/components/EveryPageComponents/Header.module.css
@@ -4,24 +4,25 @@
   justify-content: center;
   text-align: center;
   background-color:#0e3746;
-  height: 90px;
-  display: flex;
-  justify-content: center;
   margin:0;
+  min-height: 10vh;
  
   
 }
 
 .headerTitle{
   display:flex;
-  font-size: 150%;
+  font-size: 8vw;
   font-family: 'Press Start 2P', cursive;
   color: #f4f2ec;
+  margin:10px;
 }
 
 
 .welcomeUser{
+  display:flex;
   font-family: 'Press Start 2P', cursive;
-  font-size: 20%;
+  font-size: 2vw;
   color: #f4f2ec;
+  margin:10px;
 }
