--- a/src/components/ArticleComponents/AddComment.module.css
+++ b/src/components/ArticleComponents/AddComment.module.css
@@ -1,21 +1,23 @@
 @media (max-width: 600px) {
-    .addComment textarea{
-      font-size: 3.5vw;
+    .addComment {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      font-size: 3vw;
       margin: 0 auto; 
       width: 40vw;
       height:30vw;
       font-size: 2vw;
       padding: 12px 20px;
-      background-color: #f4f2ec;
-      font-family: 'Press Start 2P', cursive;
     }
 
     
 }
 input{
+      justify-content: center;
       border-radius: 10px;
       padding: 0.2rem 0.2rem;
-      font-size: 2.5vw;
+      font-size: 2vw;
       width: 20vw;
       margin: 5px auto;
       background-color: #f4f2ec;
