--- a/src/components/ArticleComponents/ArticleCard.module.css
+++ b/src/components/ArticleComponents/ArticleCard.module.css
@@ -1,4 +1,7 @@
 .articleCard{
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
   background-color: #d4d7db;
   border-radius: 10px;
   padding: 0.5rem 0.5rem;
@@ -9,23 +12,15 @@
   color:black;
 }
 
-.articleCardTitle{
-   font-family: 'Press Start 2P', cursive;
-   
-}
 
 .articleCardCommentCount{
   background-color: #d4d7db;
   border-radius: 10px;
   padding: 0.5rem 0.5rem;
-  border: 5px solid #0e3746;
+  border: 3px solid #0e3746;
   font-size: 1.5vw;
   width: 30vw;
   margin: 10px auto;
   color:black;
-  font-family: 'Press Start 2P', cursive;
-}
-
-h4{
-  font-family: 'Press Start 2P', cursive;
+  
 }
