--- a/src/components/ArticleComponents/Voting.module.css
+++ b/src/components/ArticleComponents/Voting.module.css
@@ -1,20 +1,19 @@
-.votesTally{
-  font-family: 'Press Start 2P', cursive;
-}
-
 .votesLove{
    font-size: 3vw;
+   background-color: #f4f2ec;
+   border-radius: 10px;
 
 }
 
 .votesHate{
   font-size: 3vw;
+  background-color: #f4f2ec;
+  border-radius: 10px;
 }
 
 @media (max-width: 600px) {
     .voting p {
       font-size: 2vw;
-      font-family: 'Press Start 2P', cursive;
 
     }
 }
