--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
+
 body {
   background-color:rgb(212, 205, 226);
   margin: 0;
   padding: 0px;
   font-family: 'Press Start 2P', cursive;
+  
 }
 @media screen and (max-width: 650px){
   body {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     max-height: 10rem;
     
   }
