--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 body {
   background-color:rgb(212, 205, 226);
   margin: 0;
-  padding: 0px;
+  padding: 0;
   font-family: 'Press Start 2P', cursive;
   
 }
