--- a/src/components/ArticleComponents/ArticleComments.module.css
+++ b/src/components/ArticleComponents/ArticleComments.module.css
@@ -1,14 +1,32 @@
 .articlesTitle{
   display:flex;
   justify-content: center;
+  flex-direction: column;
   
+  
+}
+.commentsTitle{
+  font-size: 3vw;
+  background-color: #d4d7db;
+  border-radius: 10px;
+  padding: 0.5rem 0.5rem;
+  border: 3px solid #0e3746;
+  font-size: 2vw;
+  width: 30vw;
+  margin: 10px auto;
+}
+
+.articleComments{
+  
+  text-align:center;
+
 }
 
 @media screen and (max-width: 650px) {
     
     .articleComments {
-        padding: 1rem 1rem;
-        margin-top: 10px;
         
+        margin-top: 10px;
+       
     }
 }
