font sizes changed with media query and some a11y edits made

--- a/src/components/ArticleComponents/ArticleCard.module.css
+++ b/src/components/ArticleComponents/ArticleCard.module.css
@@ -27,3 +27,12 @@
   color:black;
   
 }
+
+@media screen and (max-width: 650px) {
+  .articleCard{
+    font-size: 2vw;
+  }
+  .articleCardCommentCount{
+    font-size: 2vw;
+  }
+}
