--- a/src/components/ArticleComponents/AddComment.module.css
+++ b/src/components/ArticleComponents/AddComment.module.css
@@ -1,35 +1,43 @@
-@media (max-width: 600px) {
+.addComment{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 3vw;
+    margin: 0 auto; 
+    width: 50rem;
+    height:30rem;
+    font-size: 2vw;
+}
+
+textarea{
+  background-color: #f4f2ec;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1vw;
+}
+
+input{
+  display: flex;
+      justify-content: center;
+      flex-direction: column;
+  border-radius: 10px;
+  padding: 0.2rem 0.2rem;
+  font-size: 2vw;
+  margin: 5px auto;
+  background-color: #f4f2ec;
+  font-family: 'Press Start 2P', cursive;
+  }
+
+  @media  screen and (max-width: 650px) {
     .addComment {
       display: flex;
       justify-content: center;
       flex-direction: column;
       font-size: 3vw;
       margin: 0 auto; 
-      width: 40vw;
-      height:30vw;
+      width: 10rem;
+      height:4rem;
       font-size: 2vw;
       
-    }
-
+    }   
     
 }
-.commentAddTitle{
-  font-size: 3vw;
-   background-color: #d4d7db;
-  border-radius: 10px;
-  padding: 0.5rem 0.5rem;
-  border: 3px solid #0e3746;
-  font-size: 2vw;
-  width: 30vw;
-  margin: 10px auto;
-}
-input{
-  justify-content: center;
-  border-radius: 10px;
-  padding: 0.2rem 0.2rem;
-  font-size: 2vw;
-  width: 30vw;
-  margin: 5px auto;
-  background-color: #f4f2ec;
-  font-family: 'Press Start 2P', cursive;
-  }
