--- a/src/components/ArticleComponents/AddComment.module.css
+++ b/src/components/ArticleComponents/AddComment.module.css
@@ -1,15 +1,15 @@
 .addComment{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 3vw;
-    margin: 0 auto; 
-    width: 50rem;
-    height:30rem;
-    font-size: 2vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 3vw;
+  margin: 0 auto; 
+  font-size: 2vw;
 }
 
 textarea{
+  width: 30vw;
+  height:10vh;
   background-color: #f4f2ec;
   font-family: 'Press Start 2P', cursive;
   font-size: 1vw;
@@ -17,8 +17,6 @@ textarea{
 
 input{
   display: flex;
-      justify-content: center;
-      flex-direction: column;
   border-radius: 10px;
   padding: 0.2rem 0.2rem;
   font-size: 2vw;
@@ -34,8 +32,6 @@ input{
       flex-direction: column;
       font-size: 3vw;
       margin: 0 auto; 
-      width: 10rem;
-      height:4rem;
       font-size: 2vw;
       
     }   
