prettie applied to all files

--- a/src/components/ArticleComponents/ArticleCommentCard.module.css
+++ b/src/components/ArticleComponents/ArticleCommentCard.module.css
@@ -1,9 +1,9 @@
-.delete{
+.delete {
   border-radius: 10px;
   padding: 0.2rem 0.2rem;
   font-size: 1vw;
   width: 20vw;
   margin: 5px auto;
   background-color: #f4f2ec;
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
 }
