--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,13 @@
-
 body {
-  background-color:rgb(212, 205, 226);
+  background-color: rgb(212, 205, 226);
   margin: 0;
   padding: 0;
-  font-family: 'Press Start 2P', cursive;
-  
+  font-family: "Press Start 2P", cursive;
 }
-@media screen and (max-width: 650px){
+@media screen and (max-width: 650px) {
   body {
     display: flex;
     justify-content: space-evenly;
     max-height: 10rem;
-    
   }
- 
 }
-
