--- a/src/components/ArticleComponents/AddComment.module.css
+++ b/src/components/ArticleComponents/AddComment.module.css
@@ -1,39 +1,37 @@
-.addComment{
+.addComment {
   display: flex;
   justify-content: center;
   flex-direction: column;
   font-size: 3vw;
-  margin: 0 auto; 
+  margin: 0 auto;
   font-size: 2vw;
 }
 
-textarea{
+textarea {
   width: 30vw;
-  height:10vh;
+  height: 10vh;
   background-color: #f4f2ec;
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   font-size: 1vw;
 }
 
-input{
+input {
   display: flex;
   border-radius: 10px;
   padding: 0.2rem 0.2rem;
   font-size: 2vw;
   margin: 5px auto;
   background-color: #f4f2ec;
-  font-family: 'Press Start 2P', cursive;
-  }
+  font-family: "Press Start 2P", cursive;
+}
 
-  @media  screen and (max-width: 650px) {
-    .addComment {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      font-size: 3vw;
-      margin: 0 auto; 
-      font-size: 2vw;
-      
-    }   
-    
+@media screen and (max-width: 650px) {
+  .addComment {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 3vw;
+    margin: 0 auto;
+    font-size: 2vw;
+  }
 }
